# RIPPLE

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: DAY1_NOTES.md
docs/adr/: 0001-storage-format-parquet.md  0002-two-phase-station-discovery.md  0003-measure-matching-slug.md  0004-scope-tees-primary.md  0005-manifest-status-taxonomy.md  0006-active-stations-only.md
ripple/: config.py  store.py
ripple/ingest/: edm.py  hydrology.py
scripts/: refresh.py
