[project]
name = "my-mathematex-study-log"
version = "0.1.0"
description = "A self-study repository for mathematics."
readme = "README.md"
authors = [
    {name = "Joel Njoku", email = "njokujoel98@gmail.com"}
]

dependencies = [
    "sympy>=1.14.0",
    "numpy>=2.4.4",
    "pyproj>=3.7.2",
    "scipy>=1.17.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "notebook>=7.5.6",
    "ipykernel>=7.2.0",
    "ruff==0.15.12",
    "mypy==1.20.2",
    "pre-commit==4.6.0",
    "seaborn>=0.13.2",
]

requires-python = ">=3.13"

[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "S",
    "SIM",
    "RUF",
    "PT",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true